# srsRAN_4G

./: CMakeLists.txt
lib/include/srsran/phy/mdct/: differential_prod.h  mdct.h
lib/include/srsran/phy/sync/: ssb.h
lib/src/phy/: CMakeLists.txt
lib/src/phy/mdct/: CMakeLists.txt  differential_corr.c  differential_corr.h  differential_prod.c  mdct.c
lib/src/phy/mdct/test/: CMakeLists.txt  differential_correlation.c  differential_prod_test.c  mdct_test.c  unwrap_phase_test.c
lib/src/phy/sync/: ssb.c
srsue/hdr/phy/nr/: slot_sync.h
srsue/src/phy/: sync_sa.cc
srsue/src/phy/nr/: slot_sync.cc
